crates/toon-schema/tests/compile_fail/unknown_type.stderr
error: unsupported type 'SomeCustomType'
       help: supported types are: String, i8-i128, u8-u128, f32, f64, bool, Vec<T>, Option<T>, or enum types
       note: for enum types, use #[toon_schema(variants = "Variant1|Variant2")]
 --> tests/compile_fail/unknown_type.rs:8:5
  |
8 |     custom_field: SomeCustomType,
  |     ^^^^^^^^^^^^

error[E0425]: cannot find type `SomeCustomType` in this scope
 --> tests/compile_fail/unknown_type.rs:8:19
  |
8 |     custom_field: SomeCustomType,
  |                   ^^^^^^^^^^^^^^ not found in this scope
